Post & Retrieve Readers Functional
